# xiaoer-ai-devkit

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  install-skill.sh  setup.sh
.claude/: settings.local.json
claude/agents/: agent-curl-debug.md  agent-xe-evaluator.md  agent-xe-java-coding.md  agent-xe-tech-plan.md  agent-xe-unit-test.md  curl-debug-agent.md  verify-loop.md  xe-code-execution.md  xe-task-executor.md  xe-task-list.md  xe-tdd-implementation.md  xe-tech-plan.md
claude/skills/: video-prompt-generator.skill
claude/utils/: state-manager.js
deepagents_impl/tech_plan/: README.md  __init__.py  agent.py  prompts_loader.py  pyproject.toml  runner.py
deepagents_impl/tech_plan/prompts/: system_prompt.md
deepagents_impl/tech_plan/schemas/: __init__.py  artifact_schema.py  clarification_schema.py  input_schema.py  output_schema.py  state_schema.py
deepagents_impl/tech_plan/services/: __init__.py  verification_service.py
deepagents_impl/tech_plan/tests/: test_artifact_writer.py  test_state_bridge.py  test_template_loader.py  test_verification_service.py
deepagents_impl/tech_plan/tools/: __init__.py  artifact_writer.py  decision_logger.py  prd_reader.py  repo_explorer.py  state_bridge.py
docs/: 05-production-best-practices.md  ai-agent-common-patterns.md  ai-learning-plan.md  antigravity-skills-zh.md  competitor-alternatives-zh.md  copywriting-zh.md  feature-flow-skill-chain设计.md  react-useeffect.zh-CN.md  tmp-cn.md  tmp.md
docs/awesome-openclaw-skills/: OpenClaw技能清单.md  高推荐技能清单.md
docs/deepagents_mvp_smoketest/: state.json
(+180 files in other folders)
